<resources>
    <string name="app_name">Aprende Android 100 ejercicios</string>
    <string name="titulo_libro">Aprender a programar Android con 100 ejercicios prácticos</string>

    <!-- SplashScreen -->
    <string name="splah_1">Aprender</string>
    <string name="splah_2">a programar Android</string>
    <string name="splah_3">con 100 ejercicios prácticos</string>

    <!--  Botones ejercicios -->
    <string name="btn_eje16">16</string>
    <string name="txt_eje16">Hello World</string>
    <string name="btnmsg_eje16">MENSAJE DE INFORMACIÓN</string>
    <string name="title_activity_ejercicio16">My Application</string>

    <string name="btn_eje17">17</string>
    <string name="btnmsg_eje17_1">INTENT EXPLICITO</string>
    <string name="btnmsg_eje17_2">INTENT IMPLICITO</string>
    <string name="btnmsg_eje17_3">INTENT PENDING</string>
    <string name="title_activity_ejercicio17">My Application</string>
    <string name="title_2activity_ejercicio17">SecondActivity</string>
    <string name="txt2act_eje16_1">Segunda Activity</string>

    <string name="btn_eje18">18</string>
    <string name="txt_eje18">Número de segundos</string>
    <string name="btnmsg_eje18">Comenzar contador</string>
    <string name="title_activity_ejercicio18">My Application</string>

    <string name="btn_eje19">19</string>
    <string name="txt_eje19_1">Content provider</string>
    <string name="txt_eje19_2">Aprender Android</string>
    <string name="txt_eje19_3">Nombre</string>
    <string name="txt_eje19_4">Grado</string>
    <string name="btnmsg_eje19_1">AÑADIR NOMBRE</string>
    <string name="btnmsg_eje19_2">RECUPERAR ESTUDIANTE</string>
    <string name="title_activity_ejercicio19">Content Provider</string>

    <string name="btn_eje20">20</string>
    <string name="btnmsg_eje20_1">ARRANCAR SERVICIO ENLAZADO</string>
    <string name="btnmsg_eje20_2">ARRANCAR SERVICIO INICIADO</string>
    <string name="btnmsg_eje20_3">PARAR SERVICIO ENLAZADO</string>

    <string name="btn_eje21">21</string>
    <string name="txt_eje21_1">Empty Activity = Basic Activity</string>

    <string name="btn_eje22">22</string>

    <string name="btn_eje23">23</string>

    <string name="btn_eje24">24</string>

    <string name="btn_eje25">25</string>

    <string name="btn_eje26">26</string>

    <string name="btn_eje27">27</string>


    <!--  Menús -->
    <string name="menu_op1">Settings</string>


</resources>
